# GinnyMotor

./: .gitmodules  CMakeLists.txt  README.md  flash.sh  main.c  main.cpp
MotorEncoder/: CMakeLists.txt  MotorEncoder.cpp  MotorEncoder.h  MotorEncoder.pio
PwmIn/: CMakeLists.txt  PWM4.cpp  PwmIn.cpp  PwmIn.pio
